<resources>
    <string name="app_name">Hangouts</string>
    <string name="log_in_label">Log In</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="get_started_label">Get Started...</string>
    <string name="hangouts_label_caps">HANGOUTS</string>
    <string name="sign_up_label">Sign up</string>
    <string name="sign_up_label_u"><u>Sign up</u></string>
    <string name="name_label">Name</string>
    <string name="last_name_label">Last Name</string>
    <string name="next_label">Next</string>
    <string name="let_us_know_you_better_label">Let us know you better...</string>
    <string name="create_label">Create</string>
    <string name="join_label">Join</string>
    <string name="active_hangouts_label">Active Hangouts</string>
    <string name="past_hangouts_label">Past Hangouts</string>
    <string name="enter_hangout_location_label">Enter Hangout Location</string>
    <string name="date_format_label">Date (MM/dd/yy)</string>
    <string name="time_format_label">Time (HH:mm)</string>
    <string name="hangout_alias_label">Hangout Alias</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nothing_to_show_label">Nothing to show</string>
    <string name="ok_label">Ok</string>
    <string name="enter_hangout_code">Enter Hangout Code</string>
    <string name="code_hint">Code</string>
    <string name="hangout_rv_members_label">Members: %s</string>
    <string name="close_label">Close</string>
    <string name="close_hangout_dialog_title">Close Hangout</string>
    <string name="close_hangout_dialog_text">This action cannot be undone.</string>
    <string name="close_hangout_dialog_cancel">Cancel</string>
    <string name="close_hangout_dialog_accept">Accept</string>
    <string name="based_on_your_preferences_label">Based on your preferences</string>
</resources>