<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_sun_tornado_background"
    tools:context=".homeScreen.hangoutJoining.JoinHangoutFragment">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="165dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_undraw_share_link"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="@+id/cardView"
        app:layout_constraintStart_toStartOf="@+id/cardView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/content_margin"
        app:cardCornerRadius="@dimen/backcard_corner_radius"
        app:cardElevation="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvEnterCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/enter_hangout_code"
                android:textColor="@color/black"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/itJoinFragmentCodeLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                app:layout_constraintBottom_toTopOf="@+id/btnOkJoinHangout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvEnterCode">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itJoinFragmentCode"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/code_hint" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnOkJoinHangout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/content_margin"
                android:paddingHorizontal="@dimen/button_padding_horizontal"
                android:paddingVertical="@dimen/button_padding_vertical"
                android:text="@string/ok_label"
                android:textColor="@color/white"
                android:textSize="@dimen/button_font_size"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:rippleColor="@color/midnight_blue" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>